--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "axios": "^1.6.2",
     "axios-mock-adapter": "^1.22.0",
-    "draft-js": "0.11.7",
+    "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "html-to-draftjs": "1.4.0",
+    "html-to-draftjs": "^1.5.0",
     "i18next": "^23.7.8",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
